# RepasoP2-Prueba1_23-23_omp

./: CMakeLists.txt  main.cpp
